ClearKeep 3CLK32-25 Make Argon2 helper classes
[Solution]

 - use package argon2 and cryptography to implement helper classes encrypt
 - make class EncryptUtils
 - make two function encrypt data and decrypt data

[Influence]
none

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,8 @@ asyncio = "*"
 python-keycloak = "*"
 Flask = "*"
 Flask-SQLAlchemy = "*"
+argon2 = "*"
+cryptography = "*"
 
 [requires]
 python_version = "3.7"
