--- a/.docker/docker-compose-pg.yml
+++ b/.docker/docker-compose-pg.yml
@@ -6,10 +6,10 @@ services:
         # env_file:
         #     - pg.env
         environment:
-            - "POSTGRES_PASSWORD=docker"
+            - "POSTGRES_PASSWORD=.docker"
         ports: 
             - "5432:5432"
         # volumes: 
         #     - "/Users/tulp/Desktop/data:/data/db"
 
-        # docker-compose -f docker-compose-pg.yml up 
+        # .docker-compose -f .docker-compose-pg.yml up
