fix: github action yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,8 @@ jobs:
           git pull
           pip3 install -r requirement.txt
           pip3 install psycopg2-binary
-          sh protos/gen.sh
+          python3 -m grpc_tools.protoc -I=. protos/*.proto --python_out=. --grpc_python_out=.
+        #  sh protos/gen.sh
           sudo systemctl restart clearkeep
         #  docker restart clearkeep
         # ./restart-service.sh
