fix: github action yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,8 @@ name: clearkeep-test
 on:
   push:
     branches: [ development ]
-  pull_request:
-    branches: [ development ]
+#  pull_request:
+#    branches: [ development ]
 #   schedule:
 #     - cron: '0 12 * * *'
 jobs:
