fix: add crontab main

--- a/.github/workflows/dev-main.yml
+++ b/.github/workflows/dev-main.yml
@@ -64,7 +64,8 @@ jobs:
           git pull
           pip3 install -r requirement.txt
           python3 -m grpc_tools.protoc -I=. protos/*.proto --python_out=. --grpc_python_out=.
-          sudo systemctl restart clk328-http-dev.service clk328-grpc-dev.service
-
+          sudo systemctl restart clk328-http-dev.service
+          sleep 10
+          sudo systemctl restart clk328-grpc-dev.service
         #  docker restart clearkeep
         # ./restart-service.sh
