--- a/.docker/prod-docker-compose.yml
+++ b/.docker/prod-docker-compose.yml
@@ -1,15 +1,32 @@
 # Docker Compose Keycloak Postgres ( Docker compose for Keycloak with Postgres Database).
-# docker-compose -f stagging-docker-compose.yml up -d
+# docker-compose -f prod-docker-compose.yml up -d
 version: '3.1'
 
+
+volumes:
+  postgres_data:
+      driver: local
+
 services:
-  stagging_authen:
+  postgres:
+      image: postgres
+      volumes:
+        - postgres_data:/var/lib/postgresql/data
+      ports:
+              - 5432:5432
+      restart: always
+      environment:
+        POSTGRES_DB: prod-authen
+        POSTGRES_USER: admin
+        POSTGRES_PASSWORD: clk328@2021
+
+  prod_authen:
       image: jboss/keycloak
       restart: always
       environment:
         DB_VENDOR: POSTGRES
         DB_ADDR: postgres
-        DB_DATABASE: stagging-authen
+        DB_DATABASE: prod-authen
         DB_USER: admin
         DB_PASSWORD: clk328@2021
         KEYCLOAK_USER: admin
@@ -17,13 +34,14 @@ services:
         JAVA_TOOL_OPTIONS: -Dkeycloak.profile.feature.admin_fine_grained_authz=enabled -Dkeycloak.profile.feature.token_exchange=enabled
 
       ports:
-        - 18080:8080
-
-  stagging_webrtc:
+        - 8080:8080
+      depends_on:
+        - postgres
+  prod_webrtc:
       image: phuongvmodev/janus-webrtc-gateway-docker
       restart: always
       ports:
-        - 17088:7088
-        - 18288:80
-        - 18088:8088
-        - 18188:8188
+        - 7088:7088
+        - 8288:80
+        - 8088:8088
+        - 8188:8188
