--- a/.github/workflows/dev-main.yml
+++ b/.github/workflows/dev-main.yml
@@ -61,7 +61,7 @@ jobs:
         command: |
           cd /home/ubuntu/dev-clk328/ck-backend
           git checkout development
-          git reset --hard
+          git reset --hard HEAD
           git pull
           pip3 install -r requirement.txt
           python3 -m grpc_tools.protoc -I=. protos/*.proto --python_out=. --grpc_python_out=.
