--- a/.docker/prod-docker-compose.yml
+++ b/.docker/prod-docker-compose.yml
@@ -25,7 +25,7 @@ services:
       restart: always
       environment:
         DB_VENDOR: POSTGRES
-        DB_ADDR: postgres
+        DB_ADDR: 54.235.68.160:5432
         DB_DATABASE: prod-authen
         DB_USER: admin
         DB_PASSWORD: clk328@2021
