--- a/.github/workflows/production-main.yml
+++ b/.github/workflows/production-main.yml
@@ -3,75 +3,63 @@ name: clearkeep-test
 on:
   push:
     branches: [ production ]
-#  pull_request:
-#    branches: [ development ]
-#   schedule:
-#     - cron: '0 12 * * *'
 jobs:
-  deploy-test:
-    runs-on: ubuntu-latest
-    # strategy:
-    #   matrix:
-    #     python-version: [3.8]
-
+  deploy-production:
+    runs-on: ubuntu-20.04
     steps:
-    # - uses: actions/checkout@v2
-    # - name: Set up Python ${{ matrix.python-version }}
-    #   uses: actions/setup-python@v2
-    #   with:
-    #     python-version: ${{ matrix.python-version }}
+     - name: Checkout
+       uses: actions/checkout@v2
+   
+     - name: Login to Docker Hub
+       uses: docker/login-action@v1
+       with:
+         username: ${{ secrets.DOCKER_HUB_USERNAME }}
+         password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
 
-    #   # Install dependencies
-    # - name: Install dependencies
-    #   run: |
-    #     python -m pip install --upgrade pip
-    #     if [ -f requirement.txt ]; then pip install -r requirement.txt; fi
+     - name: Set up Docker Buildx
+       id: buildx
+       uses: docker/setup-buildx-action@v1
 
-      # Build and gen api document
-    # - name: Build
-    #   run: npm run build:staging
+     - name: Build and push
+       id: docker_build
+       uses: docker/build-push-action@v2
+       with:
+         context: .
+         file: ./.docker/local/dockerfile_product
+         push: true
+         tags: hoppham1210/ck:grpc-clk328
 
-    # - name: Login to Docker Hub
-    #   uses: docker/login-action@v1
-    #   with:
-    #     username: ${{ secrets.DOCKER_HUB_USERNAME }}
-    #     password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
-    # - name: Set up Docker Buildx
-    #   id: buildx
-    #   uses: docker/setup-buildx-action@v1
-
-    # - name: Build and push
-    #   id: docker_build
-    #   uses: docker/build-push-action@v2
-    #   with:
-    #     context: .
-    #     file: ./docker/staging.dockerfile
-    #     push: true
-    #     tags: duonghx98/demo-app:latest
+     - name: ssh server and run script
+       uses: appleboy/ssh-action@master
+       with:
+         host: ${{ secrets.HOST_PRODUCT }}
+         username: ${{ secrets.USERNAME_PRODUCT }}
+         key: ${{ secrets.KEY_PRODUCT }}
+         port: ${{ secrets.PORT_PRODUCT }}
+         script: sh prod-clk328/grpc/run.sh
 
     # - name: Image digest
     #   run: echo ${{ steps.docker_build.outputs.digest }}
 
-    - name: Run app
-      uses: JimCronqvist/action-ssh@master
-      with:
-        hosts: ${{ secrets.USERNAME }}@${{ secrets.HOST }}
-        privateKey: ${{ secrets.KEY }}
-        command: |
-          cd /home/ubuntu/prod-clk328/ck-backend
-          git checkout production
-          git reset --hard HEAD
-          git pull
-          pip3 install -r requirement.txt
-          python3 -m grpc_tools.protoc -I=. protos/*.proto --python_out=. --grpc_python_out=.
-          sudo systemctl restart prod-http-clk328.service
-          sleep 10
-          sudo systemctl restart prod-grpc-clk328.service
-          sleep 20
-          python3 cron_tab.py
-          sleep 20
-          sudo systemctl restart dev-http-clk328.service
-          sudo systemctl restart stagging-http-clk328.service
-        #  docker restart clearkeep
-        # ./restart-service.sh
+    #- name: Run app
+    #  uses: JimCronqvist/action-ssh@master
+    #  with:
+    #    hosts: ${{ secrets.USERNAME }}@${{ secrets.HOST }}
+    #    privateKey: ${{ secrets.KEY }}
+    #    command: |
+    #      cd /home/ubuntu/prod-clk328/ck-backend
+    #      git checkout production
+    #      git reset --hard HEAD
+    #      git pull
+    #      pip3 install -r requirement.txt
+    #      python3 -m grpc_tools.protoc -I=. protos/*.proto --python_out=. --grpc_python_out=.
+    #      sudo systemctl restart prod-http-clk328.service
+    #      sleep 10
+    #      sudo systemctl restart prod-grpc-clk328.service
+    #      sleep 20
+    #      python3 cron_tab.py
+    #      sleep 20
+    #      sudo systemctl restart dev-http-clk328.service
+    #      sudo systemctl restart stagging-http-clk328.service
+    #      docker restart clearkeep
+    #      ./restart-service.sh
