--- a/.docker/thanhpt1-vmo-docker-compose.yml
+++ b/.docker/thanhpt1-vmo-docker-compose.yml
@@ -25,7 +25,8 @@ services:
       ports:
         - 5432:5432
       restart: always
-      command: ["postgres", "-c", "logging_collector=on", "-c", "log_directory=/logs", "-c", "log_filename=postgresql.log", "-c", "log_statement=all"]
+#      command: ["postgres", "-c", "logging_collector=on", "-c", "log_directory=/logs", "-c", "log_filename=postgresql.log", "-c", "log_statement=all"]
+      command: ["postgres", "-c", "log_statement=all"]
       environment:
         POSTGRES_DB: thanhpt1_vmo_postgres_db
         POSTGRES_USER: admin
