--- a/.docker/thanhpt1-vmo-docker-compose.yml
+++ b/.docker/thanhpt1-vmo-docker-compose.yml
@@ -35,6 +35,8 @@ services:
   keycloak_authen:
       image: jboss/keycloak
       restart: always
+      volumes:
+        - ./imports:/opt/jboss/keycloak/imports
       environment:
         DB_VENDOR: POSTGRES
 #        DB_ADDR: 127.0.0.1:5432 # Bao loi FATAL, failed to connect to DB
@@ -49,6 +51,7 @@ services:
         KEYCLOAK_LOGLEVEL: ALL
         JAVA_TOOL_OPTIONS: -Dkeycloak.profile.feature.admin_fine_grained_authz=enabled -Dkeycloak.profile.feature.token_exchange=enabled
         command: -b 0.0.0.0 -bmanagement 0.0.0.0
+        KEYCLOAK_IMPORT: /opt/jboss/keycloak/imports/realm-export.json -Dkeycloak.profile.feature.upload_scripts=enabled
 
       ports:
         - 8080:8080
