--- a/.docker/thanhpt1-vmo-docker-compose.yml
+++ b/.docker/thanhpt1-vmo-docker-compose.yml
@@ -5,7 +5,7 @@
 
 
 
-# ` $ sudo DOCKER_BUILDKIT=1 docker-compose -f .docker/thanhpt1-vmo-docker-compose.yml up   `
+# ` $ sudo DOCKER_BUILDKIT=1 docker-compose -f .docker/thanhpt1-vmo-docker-compose.yml up --remove-orphans  `
 
 
 
