--- a/.docker/thanhpt1-vmo-docker-compose-2.yml
+++ b/.docker/thanhpt1-vmo-docker-compose-2.yml
@@ -56,7 +56,7 @@ services:
 
       ports:
         - 8080:8080
-        - 8443:8443
+        - 15001:8443 # TODO: fix this, borrow port
         - 9990:9990
       depends_on:
         - thanhpt1-vmo_postgres
