--- a/requirements.txt
+++ b/requirements.txt
@@ -82,6 +82,6 @@ twilio==6.51.1
 typing-extensions==3.7.4.3
 uritemplate==3.0.1
 urllib3==1.25.10
-uvloop==0.15.1
+# uvloop==0.15.1
 Werkzeug==1.0.1
 yarl==1.6.3
