--- a/requirements.txt
+++ b/requirements.txt
@@ -13,7 +13,11 @@ certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
-cryptography==2.6.1
+
+# TODO: Observe this library's new version
+# cryptography==2.6.1
+cryptography<36.1.0
+
 ecdsa==0.14.1
 firebase-admin==4.5.0
 Flask==1.1.2
@@ -45,7 +49,11 @@ itsdangerous==1.1.0
 jedi==0.18.0
 Jinja2==2.11.2
 jmespath==0.10.0
-kalyke-apns==0.1.4
+
+# TODO: observe this library's new version
+# kalyke-apns==0.1.4
+kalyke-apns==0.1.8
+
 libsignal==0.0.4
 Mako==1.1.4
 MarkupSafe==1.1.1
