add service find_user_by_email to docker

--- a/find-user-by-email/Dockerfile
+++ b/find-user-by-email/Dockerfile
@@ -1,5 +1,5 @@
 # Pin to node:16.15.0
-FROM node@sha256:9b8eb61072127e898d8d2682f28508937fc21a853c6cb5587fa14d8b05ab4455
+FROM node:16.15-slim
 
 WORKDIR /src
 COPY ./ ./
@@ -12,5 +12,5 @@ EXPOSE 12016
 EXPOSE 19090
 EXPOSE 10051
 
-CMD LOG=debug node ./app.js 1 $PUBLIC_IP_ADDRESS 2>&1 | tee stdout-stderr_$(date +%a-%Y%b%d-%H%M-%S%z).log
+CMD node ./app.js --ip $PUBLIC_IP_ADDRESS --type $TYPE --db $ORBITDB
 
