--- a/.docker/prod-docker-compose.yml
+++ b/.docker/prod-docker-compose.yml
@@ -39,6 +39,7 @@ services:
         - 8443:8443
       depends_on:
         - postgres
+
   prod_webrtc:
       image: phuongvmodev/janus-webrtc-gateway-docker
       restart: always
@@ -56,3 +57,19 @@ services:
       - ../:/ck-backend
     ports:
       - 25000:25000
+  
+  find_user_by_email:
+    build: ../find-user-by-email
+    volumes:
+      - ../find-user-by-email:/src
+      - /src/node_modules
+      - /src/orbitdb_directory
+    ports:
+      - 12016:12016
+      # - 10051:10051
+      # - 19090:19090
+    # network_mode: "host"
+    environment:
+      PUBLIC_IP_ADDRESS:
+      TYPE: slave
+      ORBITDB:
