--- a/.docker/prod-docker-compose.yml
+++ b/.docker/prod-docker-compose.yml
@@ -79,3 +79,12 @@ services:
     volumes:
       - ../configs/coturn/turnserver.conf:/etc/coturn/turnserver.conf
     network_mode: "host"
+  
+  smtp:
+    build:
+      context: .
+      dockerfile: Dockerfile-haraka
+    volumes:
+      - ../configs/haraka/auth_flat_file.ini/:/etc/haraka/config/auth_flat_file.ini
+      - ../configs/haraka/tls_cert.pem:/etc/haraka/config/tls_cert.pem
+      - ../configs/haraka/tls_key.pem:/etc/haraka/config/tls_key.pem
