lib: update libaries

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -3,11 +3,9 @@ FROM python:3.8-slim
 COPY . /ck-backend
 WORKDIR /ck-backend
 RUN apt update
-RUN apt install -y build-essential libpq-dev 
-RUN apt install -y libffi-dev
-RUN pip install --upgrade pip
-RUN pip install --upgrade setuptools
-RUN pip install -r requirement.txt
+RUN apt install -y build-essential libpq-dev libffi-dev
+RUN pip install --upgrade pip setuptools pipenv
+RUN pipenv install
 
-ENV ENV=app-config 
+ENV ENV=app-config PATH="/ck-backend/.venv/bin:$PATH"
 ENTRYPOINT ["python", "app_grpc.py"]
