--- a/.docker/prod-docker-compose.yml
+++ b/.docker/prod-docker-compose.yml
@@ -13,11 +13,12 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     ports:
-            - 5432:5432
+      - 5432:5432
     restart: unless-stopped
     logging:
       options:
         max-size: 100m
+
     environment:
       POSTGRES_DB: prod-authen
       POSTGRES_USER: admin
@@ -52,6 +53,8 @@ services:
     logging:
       options:
         max-size: 100m
+    profiles:
+      - video
     volumes:
       - ../configs/janus/janus.jcfg:/usr/local/etc/janus/janus.jcfg
       - ../configs/janus/janus.transport.http.jcfg:/usr/local/etc/janus/janus.transport.http.jcfg
@@ -65,6 +68,7 @@ services:
     build:
       context: ../
       dockerfile: .docker/Dockerfile
+    restart: always
     volumes:
       - ../:/ck-backend
       - /ck-backend/.venv
@@ -74,6 +78,9 @@ services:
         max-size: 100m
     ports:
       - 25000:25000
+    depends_on:
+      - find_user_by_email
+      - prod_authen
   
   http:
     image: docker_grpc:latest
@@ -86,10 +93,13 @@ services:
         max-size: 100m
     ports:
       - 25001:25001
+    depends_on:
+      - grpc
   
   find_user_by_email:
     restart: unless-stopped
     build: ../find-user-by-email
+    restart: always
     volumes:
       - ../find-user-by-email:/src
       - /src/node_modules
@@ -110,6 +120,8 @@ services:
     volumes:
       - ../configs/coturn/turnserver.conf:/etc/coturn/turnserver.conf
     network_mode: "host"
+    profiles:
+      - video
   
   smtp:
     build:
@@ -119,6 +131,8 @@ services:
     logging:
       options:
         max-size: 100m
+    profiles:
+      - email
     volumes:
       - ../configs/haraka/auth_flat_file.ini/:/etc/haraka/config/auth_flat_file.ini
       - ../configs/haraka/tls.ini/:/etc/haraka/config/tls.ini
