--- a/.docker/prod-docker-compose.yml
+++ b/.docker/prod-docker-compose.yml
@@ -85,6 +85,7 @@ services:
     restart: unless-stopped
     volumes:
       - ../:/ck-backend
+      - /ck-backend/.venv
     entrypoint: python app_http.py
     logging:
       options:
